# league-snowflake-role-importance

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  settings.py  snowflake.yml  streamlit_app.py
.streamlit/: config.toml
assets/sample_data/: s1000_diff_interval_state.csv  s1000_match_team_stats_summary.csv  s500_diff_interval_state.csv  s500_match_team_stats_summary.csv
src/: data.py  mock.py  query.py  theme.py  ui.py
src/model/: __init__.py  eda.py  evaluation.py  importance.py  predictor.py  prep.py
src/ui/: __init__.py  components.py  eda.py  evaluation.py  importance.py  predictor.py  theme.py
