[project]
name = "role-importance"
version = "0.1.0"
description = "Logistic regression model tracking per-lane gold-diff win coefficients across League of Legends patches."
requires-python = "~=3.11.0"
dependencies = [
    "streamlit[snowflake]",
    "pydantic>=2.0",
    "pandas",
    "numpy",
    "scikit-learn",
    "statsmodels",
    "plotly",
]

[tool.uv]
constraint-dependencies = ["numba>=0.56.0"]
exclude-newer = "2026-07-01T00:00:00Z"
